[package]
name = "lunka"
description = "Pretty thin bindings to Lua 5.4"
authors = ["[aka]bomb"]
license = "MIT"
version = "0.11.0"
edition = "2024"
repository = "https://github.com/b0mbie/lunka"
documentation = "https://docs.rs/lunka"
keywords = ["lua"]

[[example]]
name = "hello"

[[example]]
name = "hello_lib"
crate-type = ["cdylib"]

[[example]]
name = "interpreter"

[[example]]
name = "push_trait"

[[example]]
name = "os2"
crate-type = ["cdylib"]

[[example]]
name = "string_enum"

[features]
# Use Rust's `alloc` crate.
alloc = []

# Use definitions for 32 bits max.
# This is analogous to the `LUA_32BITS` define, and should be set appropriately
# depending on the compiled Lua settings.
# It's usually set to `0`, so this is disabled by default.
use-32-bits = []

# Include and use stuff from `lauxlib.h`.
auxlib = []

# Include and use definitions for importing the standard libraries (in `lualib.h`).
stdlibs = []

# Include attributes to link to `lua54` using `raw-dylib` on Windows, and
# `lua5.4` using `dylib` otherwise.
# You may disable this if, for example, you have your own `build.rs` script that
# links Lua in a different way.
link-lua54 = []

# Link statically the library `lua54` on Windows, and `lua5.4` on other
# platforms.
# This may be useful for applications, since Lua will become embedded in the
# executable.
link-static = ["link-lua54"]

default = ["alloc", "auxlib", "stdlibs", "link-lua54"]
